# bentoapp

./: README.md  project_phases.json  pyproject.toml
implementation plan/: design-v0.1.md  plan-v0.1.md
src/bentoapp/: __init__.py  app.py  cache.py  cli.py  data.py  table.py  ui.py
src/bentoapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bentoapp/examples/: __init__.py
src/bentoapp/examples/demo/: __init__.py  main.py
src/bentoapp/static/css/: base.css
src/bentoapp/templates/: base.html
tests/: test_app_starts.py  test_table_endpoint.py
