[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bentoapp"
version = "0.0.1"
description = "Build fast, customizable data web apps with bento layouts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "jinja2>=3.1",
  "orjson>=3.9",
  "polars>=0.20",
  "httpx>=0.25",
  "typer>=0.9",
  "python-multipart>=0.0.6",
  "itsdangerous>=2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.25",
  "ruff>=0.3"
]

[project.scripts]
bentoapp = "bentoapp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
